# pi-monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: REWRITE_PLAN.md
extensions/pi-monitor-heartbeat/: index.ts
src/pi_monitor/: cli.py  heartbeat.py  notify.py  state.py  tmux.py  tui.py
tests/: test_cross_platform.py  test_heartbeat.py  test_notify.py  test_perf.py  test_state.py  test_tmux.py  test_tui_app.py  test_tui_render.py
ts/: CHANGELOG.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
ts/scripts/: render-png.sh  smoke.sh  snap-empty.tsx  snapshot.tsx
ts/src/: cli.ts  config.ts
ts/src/format/: row.ts
ts/src/heartbeat/: reader.ts
ts/src/notify/: notifier.ts
ts/src/proc/: index.ts  linux.ts  macos.ts
ts/src/state/: files.ts  infer.ts  jsonl.ts  reader.ts  resolver.ts  types.ts
ts/src/tmux/: agentPanes.ts  client.ts  monitor.ts  panes.ts  viewer.ts  worktree.ts
ts/src/tui/: App.tsx  EmptyState.tsx  HelpScreen.tsx  NewPiScreen.tsx  NotificationBanner.tsx  PaneDetails.tsx  PaneRow.tsx  SessionGroup.tsx  ThemeContext.tsx  colors.ts  cursor.ts  dirComplete.ts  git.ts  helpData.ts  pulse.ts  sessionColors.ts  spinner.ts  themes.ts  tmuxBridge.ts
ts/tests/: scaffold.test.ts
ts/tests/format/: row.test.ts
ts/tests/heartbeat/: reader.test.ts
ts/tests/notify/: notifier.test.ts
ts/tests/proc/: linux.test.ts  macos.real.test.ts  macos.test.ts
ts/tests/state/: files.test.ts  infer.test.ts  jsonl.test.ts  (+1 more)
(+21 files in other folders)
