[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-monitor"
version = "0.2.0"
description = "Live tmux-aware status monitor for pi coding agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "hshayde" }]
dependencies = ["textual>=0.60.0"]

[project.scripts]
pi-monitor = "pi_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/hshayde/pi-monitor"
Repository = "https://github.com/hshayde/pi-monitor"

# PEP 735 dev-dep group. `uv sync` includes this by default, so a fresh
# clone has pytest + ruff available without any extra opt-in. CI also
# relies on this so the same versions run locally and in GitHub Actions.
[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pi_monitor"]
